--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         display: grid;
         grid-template-columns: repeat(4, 1fr);
         gap: 10px;
-        width: 70%;
+        /* width: 70%; */
         justify-items: center;
       }
 
