--- a/index.html
+++ b/index.html
@@ -136,27 +136,30 @@
         }
         .card {
           width: auto;
-          height: 679px;
+          height: 625px;
         }
+        .card-content {
+    height: 92.8%;
+ }
         .image {
-          width: 138px;
-          height: 136px;
+          width: 125px;
+          height: 126px;
         }
         .card-content h2 {
-          font-size: 31px;
+          font-size: 29px;
           line-height: 35px;
           padding: 0px 30px;
         }
         .card-content p {
-    font-size: 23px;
-    padding: 2px 34px;
-}
+          font-size: 23px;
+          padding: 2px 34px;
+        }
         .content {
-          margin-top: 16px;
+          margin-top: 9px;
         }
         .card-content .address {
           text-align: justify;
-          height: 42px;
+          height: 33px;
           font-size: 22px;
         }
 
@@ -164,14 +167,14 @@
           font-size: 22px;
         }
         .ul {
-          height: 160px;
+          height: 145px;
           margin: 2px 0px;
-          padding: 0px 58px;
+          padding: 0px 40px;
           /* text-align: justify; */
         }
         .ul li {
           font-size: 17px;
-          margin-top: 2px;
+          margin-top: 1px;
         }
       }
     </style>
