--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
           gap: 10px;
         }
         .card {
-          width: auto;
-          height: 625px;
+          max-width: 340px;
+          max-height: 600px;
         }
         .card-content {
-    height: 92.8%;
+    height: 92.9%;
  }
         .image {
-          width: 125px;
-          height: 126px;
+          width: 122px;
+          height: 122px;
         }
         .card-content h2 {
           font-size: 29px;
@@ -155,11 +155,11 @@
           padding: 2px 34px;
         }
         .content {
-          margin-top: 9px;
+          margin-top: 7px;
         }
         .card-content .address {
           text-align: justify;
-          height: 33px;
+          height: 28px;
           font-size: 22px;
         }
 
@@ -167,13 +167,13 @@
           font-size: 22px;
         }
         .ul {
-          height: 145px;
+          height: 137px;
           margin: 2px 0px;
           padding: 0px 40px;
           /* text-align: justify; */
         }
         .ul li {
-          font-size: 17px;
+          font-size: 16.2px;
           margin-top: 1px;
         }
       }
