--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         justify-content: center;
         font-size: 25px;
         color: black;
+        padding: 4px 0px!important;
       }
 
       .image {
@@ -151,20 +152,22 @@
           padding: 0px 30px;
         }
         .card-content p {
-          font-size: 23px;
-          padding: 2px 34px;
+          font-size: 21px;
+          padding: 2px 32px;
         }
         .content {
           margin-top: 7px;
         }
         .card-content .address {
           text-align: justify;
-          height: 28px;
-          font-size: 22px;
+          height: 25px;
+          font-size: 19px;
+          padding: 4px 11px!important;
         }
 
         .down-content h3 {
           font-size: 22px;
+          margin-top: 0px;
         }
         .ul {
           height: 137px;
@@ -259,9 +262,9 @@
                 item.neighborhood +
                 "," +
                 "&nbsp" +
-                "<span>" +
+                
                 item.city +
-                "</span>" +
+                
                 "</p>" +
                 '<div class="down-content">' +
                 "<h3>" +
