--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         line-height: 35px;
         padding: 4px 45px;
         font-weight: bold;
-        background: linear-gradient(
+        /* background: linear-gradient(
           to right,
           #480c7a,
           #e42f76,
@@ -71,8 +71,8 @@
         -webkit-background-clip: text;
         -moz-background-clip: text;
         -o-background-clip: text;
-        -ms-background-clip: text;
-        color: transparent;
+        -ms-background-clip: text; */
+        color: #e62a75;
         z-index: 1000;
       }
 
@@ -260,69 +260,65 @@
             });
 
             $("#cardsContainer").html(cardsHtml);
-            $(".card").click(function () {
-              var card = $(this);
+
+            $(".card").each(function (index, cardElement) {
+              var card = $(cardElement);
               var name = card.data("name");
               var imageUrl = card.data("image-url");
 
               // Use html2canvas to capture the card as an image
-              html2canvas(card[0], {
-                onrendered: function (cardCanvas) {
-                  // Create a new canvas for rendering the text
-                  var textCanvas = document.createElement("canvas");
-                  var ctx = textCanvas.getContext("2d");
-
-                  // Set canvas dimensions
-                  textCanvas.width = cardCanvas.width;
-                  textCanvas.height = cardCanvas.height;
-
-                  // Render the text with linear gradient
-                  ctx.font = "bold 36px Arial";
-                  var gradient = ctx.createLinearGradient(
-                    0,
-                    0,
-                    textCanvas.width,
-                    0
-                  );
-                  gradient.addColorStop(0, "#480c7a");
-                  gradient.addColorStop(0.33, "#e42f76");
-                  gradient.addColorStop(0.66, "#ea4b6e");
-                  gradient.addColorStop(1, "#f36a69");
-                  ctx.fillStyle = gradient;
-
-                  // Increase padding from left and right
-                  var paddingLR = 50; // Increased padding from left and right in pixels
-
-                  // Calculate X position with increased padding
-                  var xPosition = paddingLR; // Start from left padding
-
-                  ctx.textAlign = "left"; // Set text alignment to left
-                  ctx.fillText(name, xPosition, 300); // Adjust Y position as needed
-
-                  // Merge the text canvas with the card canvas
-                  var mergedCanvas = document.createElement("canvas");
-                  mergedCanvas.width = textCanvas.width;
-                  mergedCanvas.height = textCanvas.height;
-                  var mergedCtx = mergedCanvas.getContext("2d");
-                  mergedCtx.drawImage(cardCanvas, 0, 0);
-                  mergedCtx.drawImage(textCanvas, 0, 0);
-
-                  // Convert merged canvas to data URL
-                  var imageData = mergedCanvas.toDataURL("image/jpeg");
-
-                  // Create a link element
-                  var a = document.createElement("a");
-                  a.href = imageData;
-                  a.download = "card.jpg";
-
-                  // Append the link to the body and trigger a click event
-                  document.body.appendChild(a);
-                  a.click();
-                  document.body.removeChild(a);
-                },
-                useCORS: true, // Ensure that CORS is enabled to prevent security errors
-              });
+              captureCardImage(card, index, name);
             });
+
+            function captureCardImage(card, index, name) {
+              var retryCount = 3; // Number of retries
+              var captureAttempt = 1;
+
+              function capture() {
+                html2canvas(card[0], {
+                  onrendered: function (cardCanvas) {
+                    // Convert card canvas to data URL
+                    var imageData = cardCanvas.toDataURL("image/jpeg");
+
+                    if (imageData.indexOf("data:image/jpeg;base64,") === 0) {
+                      // Create a link element
+                      var a = document.createElement("a");
+                      a.href = imageData;
+                      a.download = "card_" + (index + 1) + ".jpg"; // Add index to file name to make each download unique
+
+                      // Append the link to the body and trigger a click event
+                      document.body.appendChild(a);
+                      a.click();
+                      document.body.removeChild(a);
+                    } else {
+                      // Retry if the captured image data is invalid
+                      if (captureAttempt < retryCount) {
+                        captureAttempt++;
+                        console.log(
+                          "Retry capturing card image for " +
+                            name +
+                            " (Attempt " +
+                            captureAttempt +
+                            ")"
+                        );
+                        capture();
+                      } else {
+                        console.error(
+                          "Failed to capture card image for " +
+                            name +
+                            " after " +
+                            retryCount +
+                            " attempts."
+                        );
+                      }
+                    }
+                  },
+                  useCORS: true, // Ensure that CORS is enabled to prevent security errors
+                });
+              }
+
+              capture(); // Initial capture attempt
+            }
           },
           error: function (xhr, status, error) {
             console.error("Error fetching data:", error);
