--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card Download</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:wght@100&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
         background-color: rgba(0, 0, 0, 0.515);
+        font-family: "Poppins", sans-serif;
+        font-weight: 400;
+        font-style: normal;
       }
 
       #cardsContainer {
@@ -82,10 +91,10 @@
         padding: 4px 43px;
         margin: 0px;
         color: #541b86;
+        line-height: 26px;
       }
 
       .card-content .address {
-        text-align: justify;
         height: 43px;
         display: flex;
         align-items: flex-end;
@@ -111,12 +120,12 @@
         height: 180px;
         margin: 3px 0px;
         padding: 0px 68px;
-        /* text-align: justify; */
       }
       .ul li {
         list-style: none;
         font-size: 18px;
         margin-top: 2px;
+        line-height: 21px;
       }
       .phone {
         color: white !important;
@@ -277,6 +286,7 @@
 
                 // Use html2canvas to capture the card as an image
                 captureCardImage(card, name, index + 1, cards.length);
+                // return false;
               });
             }
 
@@ -286,16 +296,20 @@
 
               function capture() {
                 html2canvas(card[0], {
+                  width: card[0].scrollWidth, // Set width to card's scroll width
+                  height: card[0].scrollHeight, // Set height to card's scroll height
+                  scale: window.devicePixelRatio, // Use device pixel ratio for higher quality
+                  logging: true, // Enable logging for debugging
                   onrendered: function (cardCanvas) {
                     // Check if the captured image is blank (black)
                     if (!isBlank(cardCanvas)) {
                       // Convert card canvas to data URL
-                      var imageData = cardCanvas.toDataURL("image/jpeg");
+                      var imageData = cardCanvas.toDataURL("image/png");
 
                       // Create a link element
                       var a = document.createElement("a");
                       a.href = imageData;
-                      a.download = name + "_" + currentIndex + ".jpg";
+                      a.download = name + "_" + currentIndex + ".png";
 
                       // Append the link to the body and trigger a click event
                       document.body.appendChild(a);
