--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
 
               function capture() {
                 html2canvas(card[0], {
-                  width: card[0].scrollWidth, // Set width to card's scroll width
-                  height: card[0].scrollHeight, // Set height to card's scroll height
+                  // width: card[0].scrollWidth, // Set width to card's scroll width
+                  // height: card[0].scrollHeight, // Set height to card's scroll height
                   scale: window.devicePixelRatio, // Use device pixel ratio for higher quality
                   logging: true, // Enable logging for debugging
                   onrendered: function (cardCanvas) {
