--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         margin: 2px 0px;
       }
       .ul {
-        height: 180px;
+        height: 177px;
         margin: 3px 0px;
         padding: 0px 68px;
       }
@@ -286,7 +286,7 @@
 
                 // Use html2canvas to capture the card as an image
                 captureCardImage(card, name, index + 1, cards.length);
-                // return false;
+        return false;
               });
             }
 
