--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
         -o-background-clip: text;
         -ms-background-clip: text; */
         /* color: #e62a75; */
-        
-        
-        color: #C92586;
+
+        color: #c92586;
         z-index: 1000;
       }
 
@@ -100,7 +99,7 @@
         font-size: 21.5px;
         padding: 4px 43px;
         margin: 0px;
-        color: #5E1F92;
+        color: #5e1f92;
         line-height: 24px;
         font-weight: 480;
       }
@@ -131,7 +130,7 @@
         letter-spacing: -1px;
       }
       .ul {
-        height: 180px;
+        height: 182px;
         margin: 2px 0px;
         padding: 0px 72px;
       }
@@ -144,6 +143,8 @@
       }
       .phone {
         color: white !important;
+        font-size: 30px!important;
+        font-weight: 400!important;
       }
 
       @media (max-width: 1350px) {
