--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
       }
 
       .down-content h3 {
-        font-size: 20px;
-        font-weight: 530;
-        color: #3c58aced;
+        font-size: 19px;
+        font-weight: 500;
+        color: #3c58acf1;
         margin: 5px 0px -1px 0px;
         padding: 0px 50px;
         letter-spacing: -1px;
@@ -136,15 +136,17 @@
       }
       .ul li {
         list-style: none;
-        font-size: 17px;
+        font-size: 16px;
         color: black;
         margin-top: 2px;
         line-height: 21px;
+        letter-spacing: -1px;
+        font-weight: 430;
       }
       .phone {
         color: white !important;
-        font-size: 30px!important;
-        font-weight: 400!important;
+        font-size: 30px !important;
+        font-weight: 440 !important;
       }
 
       @media (max-width: 1350px) {
