--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       .down-content h3 {
         font-size: 19px;
         font-weight: 500;
-        color: #3c58acf1;
+        color: #2e50b5;
         margin: 5px 0px -1px 0px;
         padding: 0px 50px;
         letter-spacing: -1px;
@@ -141,7 +141,7 @@
         margin-top: 2px;
         line-height: 21px;
         letter-spacing: -1px;
-        font-weight: 430;
+        font-weight: 400;
       }
       .phone {
         color: white !important;
