--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         padding: 4px 43px;
         margin: 0px;
         color: #5B1A9A;
-        line-height: 24px;
+        line-height: 24.4px;
         font-weight: 430;
       }
 
@@ -125,13 +125,13 @@
       .down-content h3 {
         font-size: 19px;
         font-weight: 500;
-        color: #485EB1;
+        color: #394e9e;
         margin: 5px 0px -1px 0px;
         padding: 0px 50px;
         letter-spacing: -1px;
       }
       .ul {
-        height: 185px;
+        height: 184px;
         margin: 2px 0px;
         padding: 0px 80px;
       }
@@ -142,7 +142,7 @@
         margin-top: 2px;
         line-height: 21px;
         letter-spacing: -1px;
-        font-weight: 400;
+        font-weight: 430;
       }
       .phone {
         color: #FFFCFB !important;
