--- a/index.html
+++ b/index.html
@@ -224,7 +224,10 @@
           url: "https://api-inter.vaada.app/fetchDetailsForMob",
           type: "GET",
           dataType: 'json',
-          crossDomain: true, 
+          crossDomain: true,
+          headers: {
+              'Access-Control-Allow-Origin': '*'
+            }, 
           success: function (res) {
             var cardsHtml = "";
 
